# zk-cred-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: no_delta_encoding.rs
fields/: Cargo.toml
fields/src/: lib.rs
src/: circuit.rs  fields.rs  lib.rs  sumcheck.rs  transcript.rs
src/fields/: README.md  codegen.sh  fieldp256_2.rs  mod.rs  quadratic_extension.rs
src/fields/fieldp128/: mod.rs  ops.rs
src/fields/fieldp256/: mod.rs  ops.rs
src/fields/fieldp521/: mod.rs  ops.rs
src/sumcheck/: bind.rs  mod.rs
test-vectors/: README.md
test-vectors/circuit/: longfellow-87474f308020535e57a778a82394a14106f8be5b-1.json  longfellow-mac-circuit-902a955fbb22323123aac5b69bdf3442e6ea6f80-1.circuit.zst  longfellow-mac-circuit-902a955fbb22323123aac5b69bdf3442e6ea6f80-1.json  longfellow-rfc-1-87474f308020535e57a778a82394a14106f8be5b.circuit  longfellow-rfc-1-87474f308020535e57a778a82394a14106f8be5b.json  longfellow-rfc-1-87474f308020535e57a778a82394a14106f8be5b.proof
