[package]
name = "zk-cred-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1"
byteorder = "1.5.0"
crypto-common = "0.1.6"
educe = { version = "0.6.0", features = ["Debug", "Clone", "Copy", "Hash", "Default"] }
ff = { version = "0.13", features = ["derive"] }
hex = { version = "0.4.3" }
# It's unfortunate to use an older rand crate, but ff is on rand_core 0.6
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.10.9"
zstd = "0.13.3"
